# fun-with-seL4

./: .gitmodules  CMakeLists.txt  Makefile  README.md
configs/: cfg.cmake  kernel_cfg.cmake
projects/: main.c
